--- a/resources/zach.bib
+++ b/resources/zach.bib
@@ -46,3 +46,22 @@
   year={2024},
   publisher={ACM New York, NY, USA}
 }
+
+@inproceedings{englhardt2025incorporating,
+author = {Englhardt, Zachary and H\"{a}hnlein, Felix and Mei, Yuxuan and Lin, Tong and Sun, Connor Masahiro and Zhang, Zhihan and Patel, Shwetak and Schulz, Adriana and Iyer, Vikram},
+title = {Incorporating Sustainability in Electronics Design: Obstacles and Opportunities},
+year = {2025},
+isbn = {9798400713941},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3706598.3713299},
+doi = {10.1145/3706598.3713299},
+abstract = {Life cycle assessment (LCA) is a methodology for holistically measuring the environmental impact of a product from initial manufacturing to end-of-life disposal. However, the extent to which LCA informs the design of computing devices remains unclear. To understand how this information is collected and applied, we interviewed 17 industry professionals with experience in LCA or electronics design, systematically coded the interviews, and investigated common themes. These themes highlight the challenge of LCA data collection and reveal distributed decision-making processes where responsibility for sustainable design choices—and their associated costs—is often ambiguous. Our analysis identifies opportunities for HCI technologies to support LCA computation and its integration into the design process to facilitate sustainability-oriented decision-making. While this work provides a nuanced discussion about sustainable design in the information and communication technologies (ICT) hardware industry, we hope our insights will also be valuable to other sectors.},
+booktitle = {Proceedings of the 2025 CHI Conference on Human Factors in Computing Systems},
+articleno = {1013},
+numpages = {17},
+keywords = {Environmental Impact, Life Cycle Assessment (LCA), Sustainability},
+location = {
+},
+series = {CHI '25}
+}
